JumpScript/tests/baselines/reference/superPropertyInConstructorBeforeSuperCall.errors.txt
tests/cases/conformance/classes/constructorDeclarations/superCalls/superPropertyInConstructorBeforeSuperCall.jump(7,9): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/superPropertyInConstructorBeforeSuperCall.jump(13,15): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.


==== tests/cases/conformance/classes/constructorDeclarations/superCalls/superPropertyInConstructorBeforeSuperCall.jump (2 errors) ====
    class B {
        constructor(x?: string) {}
        x(): string { return ""; }
    }
    class C1 extends B {
        constructor() {
            super.x();
            ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
            super();
        }
    }
    class C2 extends B {
        constructor() {
            super(super.x());
                  ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
        }
    }